syntax = "proto3";

option csharp_namespace = "UserManagementService";

package user;

import "google/protobuf/empty.proto";

service UserManager {
  rpc Get (UserIdRequest) returns (UserDTO);
  rpc GetAll (google.protobuf.Empty) returns (stream UserDTO);
  rpc Create (UserDTO) returns (UserDTO);
  rpc Update (UserDTO) returns (UserDTO);
  rpc Delete (UserIdRequest) returns (google.protobuf.Empty);
  rpc Search (UserDTO) returns (stream UserDTO);
}

message UserIdRequest {
  int32 id = 1;
}

message UserDTO {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
}